Abgesetzte Formeln mit gather* statt $$
$$ ist ein TeX‐Befehl, der in LaTeX nicht verwendet werden sollte. Siehe
l2tabu und das Paket onlyamsmath.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1838 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -133,9 +133,9 @@ Experimente werden durch geeignete Wahrscheinlichkeitsr"aume  beschrieben.
 \item[\rm(i)]
 Jedes Wahrscheinlichkeitsma"s ist auch \textbf{endlich additiv}, d.\,h.~sind
 $A_1,\ldots,A_n$ aus $\Algeb$ disjunkt, so folgt
-$$
-\WKM\Big(\bigcup_{j=1}^n A_j\Big)=\sum_{j=1}^n\WKM(A_j)\;.
-$$
+ \begin{gather*}
+   \WKM\Big(\bigcup_{j=1}^n A_j\Big)=\sum_{j=1}^n\WKM(A_j)\;.
+ \end{gather*}
 \item[\rm(ii)]
 Wahrscheinlichkeitsma"se sind \textbf{monoton}, d.\,h.~gilt f"ur $A,B\in\Algeb$ die Inklusion
 $A\subseteq B$, so impliziert dies $\WKM(A)\le\WKM(B)$.
@@ -146,16 +146,16 @@ $\WKM(A^c)=\WKM(\Omega\setminus A)=1-\WKM(A)$ f"ur $A\in\Algeb$.
 Wahrscheinlichkeitsma"se sind \textbf{stetig von oben}, d.\,h.~gilt f"ur $A_j\in\Algeb$
 die Aussage $A_1\supseteq A_2\supseteq\cdots$,
 so folgt
-$$
-\WKM\Big(\bigcap_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
-$$
+ \begin{gather*}
+   \WKM\Big(\bigcap_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
+ \end{gather*}
 \item[\rm(v)]
 Wahrscheinlichkeitsma"se sind auch \textbf{stetig von unten}, d.\,h.~gilt f"ur $A_j\in\Algeb$
 die Aussage $A_1\subseteq A_2\subseteq\cdots$,
 so folgt
-$$
-\WKM\Big(\bigcup_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
-$$
+  \begin{gather*}
+    \WKM\Big(\bigcup_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
+  \end{gather*}
 \end{enumerate}
 \subsection{Typen von Wahrscheinlichkeitsma"sen}
 \subsubsection{Wahrscheinlichkeitsma"se auf h"ochstens abz"ahlbar unendlichen Grundr"aumen}
@@ -182,10 +182,10 @@ F"ur eine Menge $A\subseteq \Omega$ folgt dann
 Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \eqref{p1} und \eqref{p2} vor,
 so wird durch (\ref{diskret}) ein Wahrscheinlichkeitsma"s $\WKM$ auf $\PotM(\Omega)$ definiert. F"ur
 endliche oder abz"ahlbar unendliche Grundr"aume $\Omega$ hat man also folgende "Aquivalenz:
-$$
-\{\WKM\,:\,\WKM\;\mbox{Wahrscheinlichkeitsma"s auf}\;\PotM(\Omega)\}
-\Longleftrightarrow\{(p_i)_{i\ge 1}\,:\, (p_i)_{i\ge 1}\;\mbox{erf"ullen (\ref{p1}) und (\ref{p2})}\}
-$$
+\begin{gather*}
+  \{\WKM\,:\,\WKM\;\mbox{Wahrscheinlichkeitsma"s auf}\;\PotM(\Omega)\}
+     \Longleftrightarrow\{(p_i)_{i\ge 1}\,:\, (p_i)_{i\ge 1}\;\mbox{erf"ullen (\ref{p1}) und (\ref{p2})}\}
+\end{gather*}
 Die Zuordnung erfolgt "uber (\ref{zu}) bzw.~(\ref{diskret}).
 
 \subsubsection{Diskrete Wahrscheinlichkeitsma"se}
@@ -193,9 +193,9 @@ Sei nunmehr $\Omega$ ein beliebiger Grundraum (nicht notwendig endlich
 oder abz"ahlbar unendlich). Ein Wahrscheinlichkeitsma"s $\WKM$ auf $(\Omega,\PotM(\Omega))$
 hei"st \textbf{diskret}, wenn es eine h"ochstens abz"ahlbar unendliche Teilmenge $D\subseteq \Omega$
 mit $\WKM(D)=1$ gibt. Mit $D=\{\omega_1,\omega_2,\ldots\}$ gilt dann f"ur $A\subseteq \Omega$ wie zuvor
-$$
-\WKM(A):= \sum_{\{i\, : \,\omega_i\in A\}} p_i\;,
-$$
+\begin{gather*}
+  \WKM(A):= \sum_{\{i\, : \,\omega_i\in A\}} p_i\;,
+\end{gather*}
 wobei $p_i:=\WKM(\{\omega_i\})$. Auf h"ochstens abz"ahlbar unendlichen Grundr"aumen ist somit \textbf{jedes}
 Wahrscheinlichkeitsma"s diskret.
 \subsubsection{Wahrscheinlichkeitsdichten}
@@ -214,9 +214,9 @@ deren abz"ahlbaren Vereinigungen und Durchschnitte usw.
 \subsubsection{Stetige Wahrscheinlichkeitsma"se}
 Gegeben sei eine Wahrscheinlichkeitsdichte $p$. Dann existiert ein eindeutig bestimmtes
 Wahrscheinlichkeitsma"s $\WKM \colon\BorelM(\R)\mapsto [0,1]$ mit
-$$
-\WKM([\alpha,\beta])=\WKM((\alpha,\beta])=\int_\alpha^\beta\,p(x)\,\mathrm dx
-$$
+\begin{gather*}
+  \WKM([\alpha,\beta])=\WKM((\alpha,\beta])=\int_\alpha^\beta\,p(x)\,\mathrm dx
+\end{gather*}
 f"ur alle reelle Zahlen $\alpha<\beta$. Das so erzeugte Wahrscheinlichkeitsma"s $\WKM$ hei"st \textbf{stetig}
 und $p$ nennt man die \textbf{Dichte} von $\WKM$. Stetige Wahrscheinlichkeitsma"se beschreiben Vorg"ange,
 bei denen "uberabz"ahlbar viele reelle Zahlen als Ergebnis auftreten k"onnen (z.\,B. Lebenszeiten etc.).
@@ -225,14 +225,14 @@ bei denen "uberabz"ahlbar viele reelle Zahlen als Ergebnis auftreten k"onnen (z.
 \subsubsection{Einpunktverteilung}
 Gegeben sei ein $\omega_0\in \Omega$, fest aber beliebig. Dann wird
 durch
-$$
-\delta_{\omega_0}(A):=\left\{
-\begin{array}{rcl}
-1 &:& \omega_0\in A\\
-0 &:& \omega_0\notin A
-\end{array}
-\right.
-$$
+\begin{gather*}
+  \delta_{\omega_0}(A):=\left\{
+     \begin{array}{rcl}
+       1 &:& \omega_0\in A\\
+       0 &:& \omega_0\notin A
+     \end{array}
+     \right.
+\end{gather*}
 die \textbf{Einpunktverteilung} in $\omega_0$ (oder das \textbf{Diracsche $\mathbf \delta$-Ma"s} in
 $\omega_0$) definiert. Der Wahrscheinlichkeitsraum $(\Omega,\PotM(\Omega),\delta_{\omega_0})$
 beschreibt Vorg"ange, bei denen mit Wahrscheinlichkeit $1$ genau $\omega_0$ eintritt (deterministische
@@ -242,19 +242,19 @@ Vorg"ange).
 \subsubsection{Gleichverteilung auf $N$ Punkten}
 Gegeben seien $N$ Punkte $\omega_1,\ldots,\omega_N\in\Omega$.
 Das Ma"s $\WKM$ auf $\PotM(\Omega)$ mit
-$$
-\WKM:=\frac{1}{N}\sum_{i=1}^N \delta_{\omega_i}
-$$
+\begin{gather*}
+  \WKM:=\frac{1}{N}\sum_{i=1}^N \delta_{\omega_i}
+\end{gather*}
 hei"st \textbf{Gleichverteilung} auf $\{\omega_1,\ldots,\omega_N\}$. F"ur ein Ereignis $A$ gilt dann
-$$
-\WKM(A)=\frac{\mathrm{card}\{ i\le N : \omega_i\in A\}}{N}=
-\frac{\mbox{Anzahl der g"unstigen F"alle f"ur A}}{\mbox{Anzahl der m"oglichen F"alle}}\;.
-$$
+\begin{gather*}
+  \WKM(A)=\frac{\mathrm{card}\{ i\le N : \omega_i\in A\}}{N}=
+     \frac{\mbox{Anzahl der g"unstigen F"alle f"ur A}}{\mbox{Anzahl der m"oglichen F"alle}}\;.
+\end{gather*}
 \subsubsection{Binomialverteilung}
 Sei $\Omega=\{0,\ldots,n\}$ und sei $p\in[0,1]$ vorgegeben. Dann wird durch
-$$
-B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\ldots,n\;,
-$$
+\begin{gather*}
+  B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\ldots,n\;,
+\end{gather*}
 ein Wahrscheinlichkeitsma"s $B_{n,p}$ auf $\PotM(\Omega)$ definiert. Man nennt $B_{n,p}$
 \textbf{Binomialverteilung} mit den Parametern $n$ und $p$. Die Zahl
 $B_{n,p}(\{k\})$ gibt die Wahrscheinlichkeit an, dass man bei $n$ unabh"angigen Versuchen genau $k$-mal
@@ -262,9 +262,9 @@ Erfolg hat. Dabei ist die Erfolgswahrscheinlichkeit in jedem einzelnen Versuch $
 Misserfolg $1-p$ .
 \subsubsection{Hypergeometrische Verteilung}
 Gegeben seien Zahlen $M,N,n\in\N_0$ mit $M,n\le N$. Dann wird durch
-$$
-H_{N, M ,n}(\{m\}) :=\frac{{M\choose m}{N-M\choose n-m}}{{N\choose n}}
-$$
+\begin{gather*}
+  H_{N, M ,n}(\{m\}) :=\frac{{M\choose m}{N-M\choose n-m}}{{N\choose n}}
+\end{gather*}
 ein Wahrscheinlichkeitsma"s $H_{N,M,n}$ auf $\PotM(\{0,\ldots,n\})$
 definiert. Man nennt $H_{N,M,n}$  \textbf{hypergeometrische Verteilung} mit den Parametern $N,M$ und $n$.
 Sind in einer Lieferung von $N$ Ger"aten $M$ St"uck defekt, so beschreibt $H_{N,M,n}(\{m\})$
@@ -273,17 +273,17 @@ $m$ defekte Ger"ate beobachtet.
 \subsubsection{Poissonverteilung}
 Es sei $\Omega=\N_0=\{0,1,2,\ldots\}$. F"ur eine Zahl $\lambda>0$ definiert
 man die \textbf{Poissonverteilung} mit Parameter $\lambda$ durch
-$$
-P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\mathrm e^{-\lambda}\quad\mbox{f"ur}\quad k\in\N_0\;.
-$$
+\begin{gather*}
+  P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\mathrm e^{-\lambda}\quad\mbox{f"ur}\quad k\in\N_0\;.
+\end{gather*}
 Die Bedeutung der Poissonverteilung ergibt sich aus folgendem Satz:
 \begin{thm}
 Gegeben sei eine Zahl $\lambda>0$. F"ur $n\in\N$ setze man
 $p_n:=\lambda/n$. Dann folgt f"ur alle $k\in\N_0$
 stets
-$$
-\lim_{n\to\infty} B_{n,p_n}(\{k\})= P_\lambda(\{k\})\;.
-$$
+  \begin{gather*}
+    \lim_{n\to\infty} B_{n,p_n}(\{k\})= P_\lambda(\{k\})\;.
+  \end{gather*}
 \end{thm}
 Inhaltlich bedeutet dies: F"uhrt man sehr viele unabh"angige Versuche durch ($n$ St"uck), bei denen jeweils
 nur mit sehr kleiner
@@ -295,21 +295,21 @@ mit Wahrscheinlichkeit $1-p$ auf. Man f"uhrt nun so lange unabh"angige Versuche 
 man erstmals Erfolg beobachtet. Die Wahrscheinlichkeit, dass dies im $(k+1)$-ten Versuch mit
 $k\in\N_0$ geschieht, wird durch die \textbf{geometrische Verteilung} mit Parameter $p\in(0,1]$
 beschrieben:
-$$
-\WKM(\{k\}):= p\cdot(1-p)^k\,,\quad k\in\N_0\;.
-$$
+\begin{gather*}
+  \WKM(\{k\}):= p\cdot(1-p)^k\,,\quad k\in\N_0\;.
+\end{gather*}
 \subsection{Die wichtigsten stetigen Wahrscheinlichkeitsverteilungen}
 
 \subsubsection{Gleichverteilung auf einem Intervall}
 Es sei $[a,b]$ ein endliches Intervall. Durch
-$$
-p(x):=\left\{
-\begin{array}{ccl}
-\frac{1}{b-a} &:& x\in [a,b]\\
- 0 &:& x\notin [a,b]
-\end{array}
-\right.
-$$
+\begin{gather*}
+  p(x):=\left\{
+     \begin{array}{ccl}
+       \frac{1}{b-a} &:& x\in [a,b]\\
+       0 &:& x\notin [a,b]
+     \end{array}
+     \right.
+\end{gather*}
 wird eine Wahrscheinlichkeitsdichte auf $\R$ definiert. Damit berechnet sich die Wahrscheinlichkeit
 eines Intervalls $[\alpha,\beta]$ durch
 \begin{equation}
@@ -318,9 +318,9 @@ eines Intervalls $[\alpha,\beta]$ durch
 {b-a}\;.
 \end{equation}
 Insbesondere ergibt sich im Fall $[\alpha,\beta]\subseteq [a,b]$ die Formel
-$$
-\WKM([\alpha,\beta])= \frac{\beta-\alpha}{b-a}\;,
-$$
+\begin{gather*}
+  \WKM([\alpha,\beta])= \frac{\beta-\alpha}{b-a}\;,
+\end{gather*}
 d.\,h.~die Wahrscheinlichkeit des Eintretens von $[\alpha,\beta]\subseteq[a,b]$
  h"angt nur von seiner L"ange, nicht aber von
 seiner speziellen Lage innerhalb $[a,b]$ , ab.
@@ -330,51 +330,51 @@ Intervall $[a,b]$ .
 Gegeben sei eine Zahl $\lambda>0$. Man definiert die
 \textbf{Exponentialverteilung} $E_\lambda$ mit Parameter $\lambda>0$ durch
 ihre Dichte
-$$
-p(x):=\left\{
-\begin{array}{ccr}
-\lambda\,\mathrm e^{-\lambda x} &:& x>0\\
-0 &:& x\le 0
-\end{array}
-\right.\;.
-$$
+\begin{gather*}
+  p(x):=\left\{
+     \begin{array}{ccr}
+       \lambda\,\mathrm e^{-\lambda x} &:& x>0\\
+       0 &:& x\le 0
+     \end{array}
+     \right.\;.
+\end{gather*}
 F"ur ein Intervall $[\alpha,\beta]\subseteq [0,\infty)$ berechnet sich damit
 die Wahrscheinlichkeit seines Eintretens durch
-$$
-E_\lambda([\alpha,\beta])=\lambda \int_\alpha^\beta \mathrm e^{-\lambda x}\,\mathrm dx
-= \mathrm e^{-\lambda\alpha}- \mathrm e^{-\lambda\beta}\;.
-$$
+\begin{gather*}
+  E_\lambda([\alpha,\beta])=\lambda \int_\alpha^\beta \mathrm e^{-\lambda x}\,\mathrm dx
+     = \mathrm e^{-\lambda\alpha}- \mathrm e^{-\lambda\beta}\;.
+\end{gather*}
 \subsubsection{Normalverteilung}
 Gegeben seien Zahlen $\mu\in\R$ und $\sigma>0$. Die
 Funktion
-$$
-p_{\mu,\sigma^2}(x):= \frac{1}{\sqrt{2\pi}\sigma}\,\mathrm e^{-(x-\mu)^2/2\sigma^2}\;,
-\quad x\in\R\;,
-$$
+\begin{gather*}
+  p_{\mu,\sigma^2}(x):= \frac{1}{\sqrt{2\pi}\sigma}\,\mathrm e^{-(x-\mu)^2/2\sigma^2}\;,
+     \quad x\in\R\;,
+\end{gather*}
 erzeugt ein Wahrscheinlichkeitsma"s $\mathcal N(\mu,\sigma^2)$, das
 man \textbf{Normalverteilung} mit Mittelwert $\mu$ und Varianz $\sigma^2$ nennt. Es gilt dann
-$$
-\mathcal N(\mu,\sigma^2)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}\sigma}
-\int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm dx\;.
-$$
+\begin{gather*}
+  \mathcal N(\mu,\sigma^2)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}\sigma}
+     \int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm dx\;.
+\end{gather*}
 Im Fall $\mu=0$ und $\sigma=1$ erh"alt man die \textbf{Standardnormalverteilung}
 $\mathcal N(0,1)$ . Wahrscheinlichkeiten des Eintretens von Intervallen berechnen sich in diesem Fall durch
-$$
-\mathcal N(0,1)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}}
-\int_\alpha^\beta \mathrm e^{-x^2/2}\mathrm dx\;.
-$$
+\begin{gather*}
+  \mathcal N(0,1)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}}
+     \int_\alpha^\beta \mathrm e^{-x^2/2}\mathrm dx\;.
+\end{gather*}
 
 \subsubsection{Gleichverteilung auf einer Menge im $\R^n$}
 Es sei $E\subseteq \R^n$ eine beschr"ankte und abgeschlossene
 Teilmenge, deren $n$-dimensionales Volumen $\mathrm{vol}_n(E)$ man
 berechnen kann. Man definiert die \textbf{Gleichverteilung auf $E$} durch den Ansatz
-$$
-\WKM(A)=\frac{\mathrm{vol}_n(A\cap E)}{\mathrm{vol}_n(E)}\;.
-$$
+\begin{gather*}
+  \WKM(A)=\frac{\mathrm{vol}_n(A\cap E)}{\mathrm{vol}_n(E)}\;.
+\end{gather*}
 Insbesondere ergibt sich f"ur $A\subseteq E$ die Aussage
-$$
-\WKM(A)=\frac{\mathrm{vol}_n(A)}{\mathrm{vol}_n(E)}\;,
-$$
+\begin{gather*}
+  \WKM(A)=\frac{\mathrm{vol}_n(A)}{\mathrm{vol}_n(E)}\;,
+\end{gather*}
 d.\,h., wie im eindimensionalen Fall h"angt die Wahrscheinlichkeit des Eintretens einer Menge $A\subseteq E$
 nur von deren Volumen ab, nicht aber von deren Lage innerhalb $E$ noch von ihrer Gestalt.
 \subsection{Verteilungsfunktion}
@@ -388,9 +388,9 @@ F(t):=\WKM((-\infty,t])\,,\quad t\in\R  \;,
 definiert.\\
 \textit{Hinweis:} Ist $\WKM$ ein diskretes Wahrscheinlichkeitsma"s auf $(\Omega,\PotM(\Omega))$ mit $\Omega\subseteq\R$,
 so modifiziert sich die Definition zu
-$$
-F(t):=\WKM((-\infty,t]\cap\Omega)\,,\quad t\in\R  \;.
-$$
+\begin{gather*}
+  F(t):=\WKM((-\infty,t]\cap\Omega)\,,\quad t\in\R  \;.
+\end{gather*}
 \subsubsection{Eigenschaften der Verteilungsfunktion}
 \begin{thm}
 \label{VF}
@@ -406,9 +406,9 @@ F\;\mbox{\rm ist rechtsseitig stetig}\;.
 \begin{enumerate}
 \item[(a)]
 F"ur jedes halboffene Intervall $(\alpha,\beta]$ gilt
-$$
-\WKM((\alpha,\beta])= F(\alpha)-F(\beta)\;.
-$$
+  \begin{gather*}
+    \WKM((\alpha,\beta])= F(\alpha)-F(\beta)\;.
+  \end{gather*}
 \item[(b)]
 Die Funktion $F$ besitzt in einem Punkt $t_0\in\R$ genau dann einen Sprung der H"ohe
 $h>0$ (man hat $F(t_0)-F(t_0-0)=h$) , wenn $\WKM(\{t_0\})=h$ gilt. Insbesondere hat die
@@ -417,13 +417,13 @@ des Ma"ses konzentriert ist. Dazwischen ist sie konstant.
 \item[(c)]
 Ist $F$ Verteilungsfunktion eines stetigen Wahrscheinlichkeitsma"ses $\WKM$ mit Dichte $p$, so berechnet
 sich $F$ aus
-$$
-F(t)=\int_{-\infty}^t\,p(x)\,\mathrm d x\,,\quad t\in\R\;.
-$$
+  \begin{gather*}
+    F(t)=\int_{-\infty}^t\,p(x)\,\mathrm d x\,,\quad t\in\R\;.
+  \end{gather*}
 Insbesondere gilt f"ur alle $t\in\R$, in denen $p$ stetig ist, die Gleichung
-$$
-F'(t)=\left(\frac{\mathrm d F}{\mathrm d t} \right)(t)= p(t)\;.
-$$
+  \begin{gather*}
+    F'(t)=\left(\frac{\mathrm d F}{\mathrm d t} \right)(t)= p(t)\;.
+  \end{gather*}
 \end{enumerate}
 \subsection{Bedingte Verteilungen}
 \subsubsection{Definition}
@@ -438,19 +438,19 @@ durch
 definiert. Sie gibt die Wahrscheinlichkeit daf"ur an, dass $A$
 eintritt, unter der Bedingung, dass $B$ bereits eingetreten ist. H"aufig verwendet man
 Formel (\ref{Bed}) auch in der Form
-$$
-\WKM(A\cap B)= \WKM(B)\,\WKM(A|B)\;.
-$$
+\begin{gather*}
+  \WKM(A\cap B)= \WKM(B)\,\WKM(A|B)\;.
+\end{gather*}
 \subsubsection{Eigenschaften}
 \begin{thm}
 Die Abbildung
-$$
-A\mapsto \WKM(A|B)
-$$
+  \begin{gather*}
+    A\mapsto \WKM(A|B)
+  \end{gather*}
 von $\Algeb$ nach $[0,1]$ ist ein Wahrscheinlichkeitsma"s mit den zus"atzlichen Eigenschaften
-$$
-\WKM(B|B)=1\quad\mbox{und}\quad\WKM(B^c|B)=0\;.
-$$
+  \begin{gather*}
+    \WKM(B|B)=1\quad\mbox{und}\quad\WKM(B^c|B)=0\;.
+  \end{gather*}
 \end{thm}
 \subsubsection{Formel "uber die totale Wahrscheinlichkeit}
 \begin{thm}
@@ -458,9 +458,9 @@ $$
 Gegeben seien disjunkte Mengen $B_1,\ldots,B_n$ in $\Algeb$ mit
 $\WKM(B_j)>0$. Dann gilt f"ur $A\in \Algeb$ mit $A\subseteq\bigcup_{j=1}^n B_j$
 die Aussage
-$$
-\WKM(A)=\sum_{j=1}^n\WKM(B_j)\cdot\WKM(A|B_j)\;.
-$$
+  \begin{gather*}
+    \WKM(A)=\sum_{j=1}^n\WKM(B_j)\cdot\WKM(A|B_j)\;.
+  \end{gather*}
 \end{thm}
 \textit{Bemerkung:} Insbesondere gilt der Satz im Fall $\bigcup_{j=1}^n B_j=\Omega$
 f"ur alle $A\in\Algeb$.
@@ -483,9 +483,9 @@ ersetzen.
 \subsubsection{Unabh"angigkeit von zwei Ereignissen}
 Gegeben seien zwei Ereignisse $A,B$ aus einem Wahrscheinlichkeitsraum $(\Omega,\Algeb,\WKM)$.
 Dann hei"sen $A$ und $B$ (stochastisch) \textbf{unabh"angig}, wenn
-$$
-\WKM(A\cap B)=\WKM(A)\,\WKM(B)
-$$
+\begin{gather*}
+  \WKM(A\cap B)=\WKM(A)\,\WKM(B)
+\end{gather*}
 gilt.
 \subsubsection{Eigenschaften}
 Die $\emptyset$ und $\Omega$ sind von jeder Menge $A\in\Algeb$ unah"angig. Sind
@@ -509,9 +509,9 @@ jeweils zwei Ereignisse aus $A_1,\ldots,A_n$ unabh"angig sind, d.\,h.~die Gleich
 \subsubsection{Eigenschaften}
 Unabh"angige Mengen $A_1,\ldots,A_n$ sind auch paarweise unabh"angig. Die Umkehrung ist
 i.a.~falsch. Ebenso falsch ist, dass aus
-$$
-\WKM(A_{1}\cap\cdots\cap A_{n})= \WKM(A_{1})\cdots\WKM(A_{n})
-$$
+\begin{gather*}
+  \WKM(A_{1}\cap\cdots\cap A_{n})= \WKM(A_{1})\cdots\WKM(A_{n})
+\end{gather*}
 stets die Unabh"angigkeit der $A_j$ folgt.
 
 Sind $A_1,\ldots A_n$ unabh"angig, so gilt dies auch f"ur $(A_j)_{j\in J}$  mit
@@ -523,9 +523,9 @@ $J\subseteq \{1,\ldots,n\}$.
 \subsubsection{Das vollst"andige Urbild}
 F"ur eine Abbildung $X\colon\Omega\mapsto\R$ und eine Teilmenge $B\subseteq\R$ wird das
 \textbf{vollst"andige Urbild} von $B$ unter $X$ durch
-$$
-X^{-1}(B):=\{\omega\in\Omega : X(\omega)\in B\}
-$$
+\begin{gather*}
+  X^{-1}(B):=\{\omega\in\Omega : X(\omega)\in B\}
+\end{gather*}
 definiert. Verk"urzend schreibt man auch $X^{-1}(B)=\;\{X\in B\}$.
 \subsubsection{Zuf"allige Gr"o"sen}
 Sei $\Omega$ eine Menge, die mit einer $\sigma$-Algebra $\Algeb$ versehen ist. Eine Abbildung
@@ -538,9 +538,9 @@ zur $\sigma$-Algebra $\Algeb$ geh"ort.\\
 Sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum.
 F"ur eine zuf"allige Gr"o"se $X\colon\Omega\mapsto\R$ ist die Abbildung
 $\WKM_X \colon \BorelM(\R)\mapsto [0,1]$ mit
-$$
-\WKM_X(B)=\WKM\big(X^{-1}(B)\big)=\WKM\{\omega\in\Omega : X(\omega)\in B\}=\WKM(\{X\in B\})= \WKM(X\in B)
-$$
+\begin{gather*}
+  \WKM_X(B)=\WKM\big(X^{-1}(B)\big)=\WKM\{\omega\in\Omega : X(\omega)\in B\}=\WKM(\{X\in B\})= \WKM(X\in B)
+\end{gather*}
 sinnvoll definiert.
 \begin{thm}
 Die Abbildung $\WKM_X$ ist ein Wahrscheinlichkeitsma"s auf $(\R,\BorelM(\R))$.
@@ -549,22 +549,22 @@ Man nennt $\WKM_X$ das \textbf{Verteilungsgesetz} von $X$ (bzgl.~$\WKM$).
 \subsubsection{Typen von zuf"alligen Gr"o"sen}
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{diskret}, wenn $\WKM_X$ ein diskretes
 Wahrscheinlichkeitsma"s ist. Damit hat $\WKM_X$ die Gestalt
-$$
-\WKM_X(B)=\sum_{\{i\, : \,x_i\in  B\}} p_i
-$$
+\begin{gather*}
+  \WKM_X(B)=\sum_{\{i\, : \,x_i\in  B\}} p_i
+\end{gather*}
 mit geeigneten $x_i\in\R$ und $p_i\ge 0$. Die $x_i$ sind die m"oglichen Werte von $X$, d.\,h.~es
 gilt\\ $\WKM(X\in\{x_1,x_2,\ldots\})=1$,
 und
-$$
-p_i=\WKM\{\omega\in\Omega : X(\omega)=x_i\}\;.
-$$
+\begin{gather*}
+  p_i=\WKM\{\omega\in\Omega : X(\omega)=x_i\}\;.
+\end{gather*}
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{stetig}, falls $\WKM_X$ ein stetiges Wahrscheinlichkeitsma"s
 ist. Das gilt genau dann, wenn mit einer Wahrscheinlichkeitsdichte $p$ f"ur alle $\alpha<\beta$
 die Gleichung
-$$
-\WKM_X([\alpha,\beta])=\WKM\{\omega\in\Omega : \alpha\le X(\omega)\le\beta\}=\int_\alpha^\beta\,p(x)\,
-\mathrm d x
-$$
+\begin{gather*}
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in\Omega : \alpha\le X(\omega)\le\beta\}=\int_\alpha^\beta\,p(x)\,
+     \mathrm d x
+\end{gather*}
 erf"ullt ist. Die Funktion $p$ nennt man auch \textbf{Verteilungsdichte} (oder einfach
 \textbf{Dichte}) von $X$.
 \subsubsection{Speziell verteilte diskrete zuf"allige Gr"o"sen}
@@ -573,13 +573,13 @@ Eine zuf"allige Gr"o"se $X$ hei"st \textbf{gleichverteilt}
 oder \textbf{Poissonverteilt} etc., wenn $\WKM_X$ von diesem Typ ist. In allen diesen F"allen
 ist $X$ diskret. Zum Beispiel ist $X$ gem"a"s $B_{n,p}$ verteilt (man schreibt auch
 $X\sim B_{n,p}$), falls f"ur $0\le k\le n$ stets
-$$
-\WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\} = {n \choose k} p^k(1-p)^{n-k}
-$$
+\begin{gather*}
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\} = {n \choose k} p^k(1-p)^{n-k}
+\end{gather*}
 gilt. Analog ist $X$ gem"a"s $P_\lambda$ verteilt, sofern f"ur $k\in\N_0$
-$$
-\WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\}=\frac{\lambda^k}{k!}\mathrm e^{-\lambda}\;.
-$$
+\begin{gather*}
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\}=\frac{\lambda^k}{k!}\mathrm e^{-\lambda}\;.
+\end{gather*}
 \subsubsection{Speziell verteilte stetige zuf"allige Gr"o"sen}
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{gleichverteilt} auf einem Intervall,
 oder \textbf{exponentialverteilt} oder \textbf{normalverteilt} etc., wenn $\WKM_X$ von diesem Typ
@@ -587,29 +587,29 @@ ist.
 Alle diese zuf"alligen Gr"o"sen sind stetig.
 Zum Beispiel ist $X$ gleichverteilt auf $[a,b]$, falls f"ur alle $\alpha<\beta$
 stets
-$$
-\WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}
-=\frac{\mbox{L"ange von}\, ([\alpha,\beta]\cap[a,b])}{b-a}
-$$
+\begin{gather*}
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}
+     =\frac{\mbox{L"ange von}\, ([\alpha,\beta]\cap[a,b])}{b-a}
+\end{gather*}
 gilt. Oder $X$ ist $\mathcal N(\mu,\sigma^2)$-verteilt (man schreibt $X\sim \mathcal N(\mu,\sigma^2)$),
 sofern
-$$
-\WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}=
-\frac{1}{\sqrt{2\pi}\sigma}\int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm d x\;.
-$$
+\begin{gather*}
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}=
+     \frac{1}{\sqrt{2\pi}\sigma}\int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm d x\;.
+\end{gather*}
 \subsubsection{Identisch verteilte zuf"allige Gr"o"sen}
 Zwei zuf"allige Gr"o"sen $X$ und $Y$ sind \textbf{identisch verteilt}, wenn $\WKM_X=\WKM_Y$ gilt,
 d.\,h.~f"ur alle $B\in\BorelM(\R)$ hat man
-$$
-\WKM\{\omega\in \Omega : X(\omega)\in B\}= \WKM\{\omega\in \Omega : Y(\omega)\in B\}\;.
-$$
+\begin{gather*}
+  \WKM\{\omega\in \Omega : X(\omega)\in B\}= \WKM\{\omega\in \Omega : Y(\omega)\in B\}\;.
+\end{gather*}
 Man schreibt dann $X\stackrel{d}{=}Y$.
 \subsubsection{Verteilungsfunktion einer zuf"alligen Gr"o"se}
 Die \textbf{Verteilungsfunktion} $F_X$ einer zuf"alligen Gr"o"se ist die Verteilungsfunktion
 ihres Verteilungsgesetzes, d.\,h., es gilt
-$$
-F_X(t)=\WKM_X\big((-\infty,t]\big)=\WKM\{\omega\in\Omega : X(\omega)\le t\}\,,\quad t\in \R\;.
-$$
+\begin{gather*}
+  F_X(t)=\WKM_X\big((-\infty,t]\big)=\WKM\{\omega\in\Omega : X(\omega)\le t\}\,,\quad t\in \R\;.
+\end{gather*}
 F"ur zwei zuf"allige Gr"o"sen $X$ und $Y$ gilt genau dann $X\stackrel{d}{=}Y$, wenn man
 $F_X=F_Y$ hat.
 
@@ -620,22 +620,22 @@ Die Funktion $F_X$ besitzt die Eigenschaften aus Satz \ref{VF}.
 Sei $\Omega$ eine Menge mit einer $\sigma$-Algebra $\Algeb$. Eine Abbildung $\vec X \colon \Omega\mapsto\R^n$
 hei"st ($n$-dimensionaler) \textbf{zuf"alliger Vektor}, wenn seine Koordinatenabbildungen
 $X_j \colon\Omega\mapsto \R$ alle zuf"allige Gr"o"sen sind. Dabei sind wie "ublich die $X_j$ durch
-$$
-\vec X(\omega)=(X_1(\omega),\ldots,X_n(\omega))\;,\quad \omega\in\Omega\,,
-$$
+\begin{gather*}
+  \vec X(\omega)=(X_1(\omega),\ldots,X_n(\omega))\;,\quad \omega\in\Omega\,,
+\end{gather*}
 definiert.
 
 \subsubsection{Gemeinsames Verteilungsgesetz}
 Sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum. Dann definiert
 man wie im eindimensionalen Fall das Verteilungsgesetz $\WKM_{\vec X}$ von $\vec X$
 durch
-$$
-\WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega : (X_1(\omega),\ldots,X_n(\omega))\in B\}\;.
-$$
+\begin{gather*}
+  \WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega : (X_1(\omega),\ldots,X_n(\omega))\in B\}\;.
+\end{gather*}
 Im Spezialfall $B=B_1\times\cdots\times B_n$ f"ur Borelmengen $B_j\subseteq\R$ folgt
-$$
-\WKM_{\vec X}(B)=\WKM(X_1\in B_1,\ldots, X_n\in B_n)\;.
-$$
+\begin{gather*}
+  \WKM_{\vec X}(B)=\WKM(X_1\in B_1,\ldots, X_n\in B_n)\;.
+\end{gather*}
 Deshalb nennt man $\WKM_{\vec X}$ auch \textbf{gemeinsames Verteilungsgesetz} der zuf"alligen
 Gr"o"sen $X_1,\ldots,X_n$.
 \subsubsection{Randverteilungen}
@@ -644,9 +644,9 @@ die \textbf{Randverteilungen} von $\vec X$. Hierbei sind wie zuvor die zuf"allig
 zugeh"origen Koordinatenabbildungen.
 \begin{thm}
 Die Randverteilungen berechnen sich aus der gemeinsamen Verteilung durch
-$$
-\WKM_{X_j}(B)= \WKM_{\vec X}(\R\times\cdots\times \underbrace{B}_j\times\cdots\times\R)\;,\quad B\in\BorelM(\R)\;.
-$$
+  \begin{gather*}
+    \WKM_{X_j}(B)= \WKM_{\vec X}(\R\times\cdots\times \underbrace{B}_j\times\cdots\times\R)\;,\quad B\in\BorelM(\R)\;.
+  \end{gather*}
 Damit bestimmt die gemeinsame Verteilung die zugeh"origen Randverteilungen.
 \end{thm}
 \textit{Bemerkung:} Die Umkehrung der obigen Aussage ist i.a.~falsch, d.\,h.~es existieren zuf"allige
@@ -660,38 +660,38 @@ Folgen
 $(x_i)_{i\ge 1}$ bzw.~$(y_j)_{j\ge 1}$ von reellen Zahlen bezeichnen  die m"oglichen Werte von $X$ bzw.~$Y$.
 Dann nimmt der Vektor $(X,Y)$ die Werte $(x_i,y_j)_{i,j\ge 1}$ an und f"ur das Verteilungsgesetz
 von $\WKM_{(X,Y)}$, d.\,h.~die gemeinsame Verteilung von $X$ und $Y$, gilt
-$$
-\WKM_{(X,Y)}(B)=\sum_{\{(i,j)\,:\, (x_i,y_j)\in B\}} p_{ij}\,,\quad B\in\PotM(\R^2)\,,
-$$
+\begin{gather*}
+  \WKM_{(X,Y)}(B)=\sum_{\{(i,j)\,:\, (x_i,y_j)\in B\}} p_{ij}\,,\quad B\in\PotM(\R^2)\,,
+\end{gather*}
 wobei
-$$
-p_{ij}= \WKM_{(X,Y)}(\{(x_i,y_j)\})=\WKM(X=x_i,Y=y_j)\;.
-$$
+\begin{gather*}
+  p_{ij}= \WKM_{(X,Y)}(\{(x_i,y_j)\})=\WKM(X=x_i,Y=y_j)\;.
+\end{gather*}
 F"ur die Randverteilungen ergibt sich dann
-$$
-\WKM_X(B)=\sum_{\{i\,:\,x_i\in B\}} q_i \qquad\mbox{und}\qquad
-\WKM_Y(B)=\sum_{\{j\,:\,y_j\in B\}} r_j\,,\quad B\in\PotM(\R)\,,
-$$
+\begin{gather*}
+  \WKM_X(B)=\sum_{\{i\,:\,x_i\in B\}} q_i \qquad\mbox{und}\qquad
+     \WKM_Y(B)=\sum_{\{j\,:\,y_j\in B\}} r_j\,,\quad B\in\PotM(\R)\,,
+\end{gather*}
 mit
-$$
-q_i=\sum_{j=1}^\infty p_{ij}\qquad\mbox{und}\qquad r_j=\sum_{i=1}^\infty p_{ij}\;\;\;.
-$$
+\begin{gather*}
+  q_i=\sum_{j=1}^\infty p_{ij}\qquad\mbox{und}\qquad r_j=\sum_{i=1}^\infty p_{ij}\;\;\;.
+\end{gather*}
 \subsubsection{Randverteilungen stetiger Vektoren}
 \label{stet}
 Zur besseren "Ubersichtlichkeit betrachten wir auch hier nur den Fall $n=2$. Der
 $2$-dimensionale Vektor $(X,Y)$ sei wie oben definiert. Diesmal nehmen wir aber an, dass
 $\WKM_{(X,Y)}$ eine Dichte hat, es also eine Funktion $p \colon\R^2\mapsto\R$ gibt, so
 dass f"ur alle $\alpha<\beta$ und $\gamma<\delta$ stets
-$$
-\WKM_{(X,Y)}\big([\alpha,\beta]\times[\gamma,\delta]\big)
-=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le\beta,\,\gamma\le Y(\omega)\le\delta\}
-=\int_\alpha^\beta\int_\gamma^\delta p(x,y)\,\mathrm d y \,\mathrm d x
-$$
+\begin{gather*}
+  \WKM_{(X,Y)}\big([\alpha,\beta]\times[\gamma,\delta]\big)
+     =\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le\beta,\,\gamma\le Y(\omega)\le\delta\}
+     =\int_\alpha^\beta\int_\gamma^\delta p(x,y)\,\mathrm d y \,\mathrm d x
+\end{gather*}
 gilt. Dann haben $X$ bzw.~$Y$ Verteilungsdichten $q$ und $r$ mit
-$$
-q(x):=\int_{-\infty}^\infty p(x,y)\,\mathrm d y\qquad\mbox{und}\qquad
-r(y):=\int_{-\infty}^\infty p(x,y)\,\mathrm d x\;.
-$$
+\begin{gather*}
+  q(x):=\int_{-\infty}^\infty p(x,y)\,\mathrm d y\qquad\mbox{und}\qquad
+     r(y):=\int_{-\infty}^\infty p(x,y)\,\mathrm d x\;.
+\end{gather*}
 \subsubsection{Unabh"angigkeit von zuf"alligen Gr"o"sen}
 Gegeben seien $n$ zuf"allige Gr"o"sen $X_1,\ldots,X_n$ auf $(\Omega,\Algeb,\WKM)$. Gilt f"ur beliebige
 Borelmengen $B_1,\ldots,B_n\in\BorelM(\R)$ stets
@@ -707,9 +707,9 @@ reellen Zahlen $\R$ einsetzen kann.\\
 \textit{Bemerkung 2:} Es reicht aus, wenn Gleichung (\ref{unab}) mit Intervallen $B_j$ der Form
 $(-\infty,t_j]$ f"ur alle $t_j\in\R$ gilt. Die zuf"alligen Gr"o"sen $X_1,\ldots,X_n$ sind also
 dann und nur dann unabh"angig, wenn f"ur alle $t_j\in\R$ stets
-$$
-\WKM(X_1\le t_1,\ldots,X_n\le t_n)=\WKM(X_1\le t_1)\cdots\WKM(X_n\le t_n)
-$$
+\begin{gather*}
+  \WKM(X_1\le t_1,\ldots,X_n\le t_n)=\WKM(X_1\le t_1)\cdots\WKM(X_n\le t_n)
+\end{gather*}
 folgt.\\
 \textit{Bemerkung 3:} Aufgrund von (\ref{unab}) ist die gemeinsame Verteilung von $X_1,\ldots,X_n$
 im Fall der Unabh"angigkeit eindeutig durch
@@ -717,13 +717,13 @@ ihre Randverteilungen $P_{X_j},$ $1\le j\le n$, bestimmt.
 \subsubsection{Spezialf"alle}
 Besitzen $X$ und $Y$ die Eigenschaften aus \ref{disk}, so sind $X$ und $Y$ dann und nur  dann
 unabh"angig, wenn
-$$
-p_{ij}=q_i\cdot r_j\,,\quad 1\le i,j<\infty\;.
-$$
+\begin{gather*}
+  p_{ij}=q_i\cdot r_j\,,\quad 1\le i,j<\infty\;.
+\end{gather*}
 Im stetigen Fall \ref{stet} sind $X$ und $Y$ genau dann unabh"angig, wenn
-$$
-p(x,y)=q(x)\cdot r(y)\,,\quad x,y\in\R\;.
-$$
+\begin{gather*}
+  p(x,y)=q(x)\cdot r(y)\,,\quad x,y\in\R\;.
+\end{gather*}
 \subsection{Rechnen mit zuf"alligen Gr"o"sen}
 \subsubsection{Transformationen}
 Eine Abbildung $f\colon\R\mapsto\R$ hei"st \textbf{messbar}, wenn f"ur jedes $t\in\R$ die
@@ -753,36 +753,36 @@ Gleichverteilung aus $[0,1]$ gew"ahlt wurden, so sind die Zahlen $x_j:= F_X^{-1}
 und gem"a"s $\WKM_X$ verteilt.
 \subsubsection{Lineare Transformationen}
 F"ur reelle Zahlen $a\not=0$ und $b\in\R$ betrachte man die lineare Transformation
-$$
-Y:=a\,X+ b
-$$
+\begin{gather*}
+  Y:=a\,X+ b
+\end{gather*}
 einer zuf"alligen Gr"o"se $X$.
 \begin{thm}
 Im Fall $a>0$ folgt
-$$
-F_Y(t)=F_X\left(\frac{t-b}{a}\right)\;.
-$$
+  \begin{gather*}
+    F_Y(t)=F_X\left(\frac{t-b}{a}\right)\;.
+  \end{gather*}
 Ist $a<0$, so ergibt sich
-$$
-F_Y(t)=1-\WKM\left(X<\frac{t-b}{a}\right)\;,
-$$
+  \begin{gather*}
+    F_Y(t)=1-\WKM\left(X<\frac{t-b}{a}\right)\;,
+  \end{gather*}
 also
-$$
-F_Y(t)=1-F_X\left(\frac{t-b}{a}\right)
-$$
+  \begin{gather*}
+    F_Y(t)=1-F_X\left(\frac{t-b}{a}\right)
+  \end{gather*}
 im Fall stetiger $X$.
 \end{thm}
 \textit{Folgerung:} Besitzt $X$ die Verteilungsdichte $p$, so hat $Y=a\,X+b$ eine Dichte $q$,
 die sich aus $p$ durch
-$$
-q(t)=\frac{1}{|a|}\;p\left(\frac{t-b}{a}\right)\,,\quad t\in\R\,,
-$$
+\begin{gather*}
+  q(t)=\frac{1}{|a|}\;p\left(\frac{t-b}{a}\right)\,,\quad t\in\R\,,
+\end{gather*}
 ergibt.
 \subsubsection{Addition zuf"alliger Gr"o"sen}
 F"ur zwei zuf"allige Gr"o"sen $X$  und $Y$ wird ihre Summe $X+Y$ durch
-$$
-(X+Y)(\omega):=X(\omega)+Y(\omega)\;,\qquad \omega\in\Omega\,,
-$$
+\begin{gather*}
+  (X+Y)(\omega):=X(\omega)+Y(\omega)\;,\qquad \omega\in\Omega\,,
+\end{gather*}
 definiert.
 \begin{thm}
 Sind $X$ und $Y$ zuf"allige Gr"o"sen, so gilt dies auch f"ur $X+Y$ .
@@ -794,23 +794,23 @@ Es seien $X$ und $Y$ unabh"angige zuf"allige Gr"o"sen.
 \begin{enumerate}
 \item
 Nehmen $X$ und $Y$ Werte in den ganzen Zahlen $\Z$ an, so folgt
-$$
-\WKM(X+Y=k)=\sum_{i=-\infty}^\infty\WKM(X=i)\,\WKM(Y=k-i)\;,\quad k\in \Z\;.
-$$
+  \begin{gather*}
+    \WKM(X+Y=k)=\sum_{i=-\infty}^\infty\WKM(X=i)\,\WKM(Y=k-i)\;,\quad k\in \Z\;.
+  \end{gather*}
 \item
 Besitzen $X$ und $Y$ Werte in $\N_0$, so ergibt sich
-$$
-\WKM(X+Y=k)=\sum_{i=0}^k\WKM(X=i)\,\WKM(Y=k-i)\;,\quad k\in \N_0\;.
-$$
+  \begin{gather*}
+    \WKM(X+Y=k)=\sum_{i=0}^k\WKM(X=i)\,\WKM(Y=k-i)\;,\quad k\in \N_0\;.
+  \end{gather*}
 \end{enumerate}
 \end{thm}
 Im Fall stetiger zuf"alliger Gr"o"sen gilt folgender Satz:
 \begin{thm}
 Seien $X$ und $Y$ unabh"angig mit Verteilungsdichten $p$ und $q$. Dann besitzt $X+Y$
 die Verteilungsdichte $r$  mit
-$$
-r(x)=\int_{-\infty}^\infty p(x-y)\,q(y)\,\mathrm d y = \int_{-\infty}^\infty p(y)\,q(x-y)\,\mathrm d y \;.
-$$
+  \begin{gather*}
+    r(x)=\int_{-\infty}^\infty p(x-y)\,q(y)\,\mathrm d y = \int_{-\infty}^\infty p(y)\,q(x-y)\,\mathrm d y \;.
+  \end{gather*}
 \end{thm}
 Man nennt $r$ die \textbf{Faltung} von $p$ und $q$ und schreibt $r=p*q$.
 \subsubsection{Addition speziell verteilter zuf"alliger Gr"o"sen}
@@ -830,33 +830,33 @@ $X+Y\sim \mathcal N(\mu_1+\mu_2,\sigma_1^2+\sigma_2^2)$ .
 \subsubsection{Erwartungswert diskreter zuf"alliger Gr"o"sen}
 Eine zuf"allige Gr"o"se $X$ nehme Werte $x_1,x_2,\ldots$ aus $[0,\infty)$ an. Dann
 definiert man den \textbf{Erwartungswert} von $X$ durch
-$$
-\E X :=\sum_{i=1}^\infty x_i\,\WKM(X=x_i)\;.
-$$
+\begin{gather*}
+  \E X :=\sum_{i=1}^\infty x_i\,\WKM(X=x_i)\;.
+\end{gather*}
 Es gilt dann $0\le \E X \le \infty$ .
 
 Sind nunmehr die Werte von $X$ beliebige reelle Zahlen (nicht notwendig $\ge 0$)
 , so sagt man, dass $X$ einen \textbf{Erwartungswert
 besitzt}, wenn
-$$
-\sum_{i=1}^\infty |x_i|\,\WKM(X=x_i)<\infty\;.
-$$
+\begin{gather*}
+  \sum_{i=1}^\infty |x_i|\,\WKM(X=x_i)<\infty\;.
+\end{gather*}
 In diesem Fall ist der Erwartungswert von $X$ mit
-$$
-\E X :=\sum_{i=1}^\infty x_i\,\WKM(X=x_i)
-$$
+\begin{gather*}
+  \E X :=\sum_{i=1}^\infty x_i\,\WKM(X=x_i)
+\end{gather*}
 eine wohldefinierte reelle Zahl.
 
 \subsubsection{Erwartungswert stetiger zuf"alliger Gr"o"sen}
 Sei $p$ die Verteilungsdichte einer zuf"alligen Gr"o"se $X$. Dann \textbf{besitzt} $X$ einen
 \textbf{Erwartungswert}, wenn
-$$
-\int_{-\infty}^\infty |x|\,p(x)\,\mathrm   d x <\infty\;,
-$$
+\begin{gather*}
+  \int_{-\infty}^\infty |x|\,p(x)\,\mathrm   d x <\infty\;,
+\end{gather*}
 und man definiert den \textbf{Erwartungswert} von $X$ durch
-$$
-\E X := \int_{-\infty}^\infty x \,p(x)\,\mathrm   d x\;.
-$$
+\begin{gather*}
+  \E X := \int_{-\infty}^\infty x \,p(x)\,\mathrm   d x\;.
+\end{gather*}
 \subsubsection{Beispiele zur Berechnung von Erwartungswerten}
 \medskip
 
@@ -881,36 +881,36 @@ Der Erwartungswert einer zuf"alligen Gr"o"se hat folgende Eigenschaften:
 \item
 Der Erwartungswert ist linear, d.\,h.~f"ur alle $a,b\in\R$ und zuf"allige Gr"o"sen $X$ und $Y$
 gilt
-$$
-\E(a X+ b Y) = a\,\E X + b\, \E Y\;.
-$$
+  \begin{gather*}
+    \E(a X+ b Y) = a\,\E X + b\, \E Y\;.
+  \end{gather*}
 \item
 Sei  $X$ diskret mit m"oglichen Werten $x_1,x_2,\ldots$ aus $\R$ .
 Dann existiert f"ur eine Funktion $f \colon\R\mapsto\R$
 der Erwartungswert $\E f(X)$ genau dann, wenn
-$$
-\sum_{i=1}^\infty |f(x_i)|\,\WKM(X=x_i)<\infty\;,
-$$
+  \begin{gather*}
+    \sum_{i=1}^\infty |f(x_i)|\,\WKM(X=x_i)<\infty\;,
+  \end{gather*}
 und es gilt
-$$
-\E f(X)=\sum_{i=1}^\infty f(x_i)\,\WKM(X=x_i)\;.
-$$
+  \begin{gather*}
+    \E f(X)=\sum_{i=1}^\infty f(x_i)\,\WKM(X=x_i)\;.
+  \end{gather*}
 \item
 Ist $X$ stetig mit Verteilungsdichte $p$ , so existiert f"ur eine messbare
 Abbildung $f \colon\R\mapsto\R$ genau dann der Erwartungswert von $f(X)$ , wenn
-$$
-\int_{-\infty}^\infty |f(x)|\,p(x)\,\mathrm d x<\infty\;,
-$$
+  \begin{gather*}
+    \int_{-\infty}^\infty |f(x)|\,p(x)\,\mathrm d x<\infty\;,
+  \end{gather*}
 und man hat
-$$
-\E f(X)=\int_{-\infty}^\infty  f(x) \,p(x)\,\mathrm d x\;.
-$$
+  \begin{gather*}
+    \E f(X)=\int_{-\infty}^\infty  f(x) \,p(x)\,\mathrm d x\;.
+  \end{gather*}
 \item
 Sind $X$ und $Y$ unabh"angige zuf"allige Gr"o"sen deren Erwartungswert existiert,
 so existiert auch der Erwartungswert von $X\cdot Y$, und es gilt
-$$
-\E(X\cdot Y)= \E X \cdot \E Y\;.
-$$
+  \begin{gather*}
+    \E(X\cdot Y)= \E X \cdot \E Y\;.
+  \end{gather*}
 \end{enumerate}
 \end{thm}
 
@@ -918,13 +918,13 @@ $$
 \subsubsection{Momente}
 Sei $n\in\N$. Eine zuf"allige Gr"o"se $X$ besitzt ein \textbf{$n$-tes Moment}, wenn
 $\E|X|^n<\infty$ . Im diskreten Fall bedeutet dies
-$$
-\sum_{i=1}^\infty |x_i|^n\WKM(X=x_i)<\infty
-$$
+\begin{gather*}
+  \sum_{i=1}^\infty |x_i|^n\WKM(X=x_i)<\infty
+\end{gather*}
 und im stetigen
-$$
-\int_{-\infty}^\infty |x|^n\,p(x)\,\mathrm d x<\infty\;.
-$$
+\begin{gather*}
+  \int_{-\infty}^\infty |x|^n\,p(x)\,\mathrm d x<\infty\;.
+\end{gather*}
 Insbesondere hat $X$ ein erstes Moment, genau dann, wenn $\E X$ existiert.
 \begin{thm}
 Sei $1\le m\le n$. Hat eine zuf"allige Gr"o"se $X$ ein $n$-tes Moment, so besitzt sie auch ein $m$-tes Moment.
@@ -933,9 +933,9 @@ Insbesondere hat jede zuf"allige Gr"o"se mit zweitem Moment einen Erwartungswert
 \subsubsection{Varianz}
 Es sei $X$ eine zuf"allige Gr"o"se mit zweitem Moment. Sei $a:=\E X$. Dann definiert man
 die \textbf{Varianz} (oder \textbf{Streuung}) von $X$ durch
-$$
-\V X:= \E(X-a)^2\;.
-$$
+\begin{gather*}
+  \V X:= \E(X-a)^2\;.
+\end{gather*}
 Die Varianz gibt den mittleren quadratischen Abstand einer zuf"alligen Gr"o"se $X$ von ihrem
 Erwartungswert an. Sie ist ein Ma"s daf"ur, wie sehr die Werte von $X$ um $\E X$ schwanken.
 
@@ -946,30 +946,30 @@ folgenden Aussagen:
 \begin{enumerate}
 \item
 Mit $a:=\E X$ berechnet sich die Varianz f"ur diskrete zuf"allige Gr"o"sen in der Form
-$$
-\V X = \sum_{i=1}^\infty (x_i-a)^2\,\WKM(X=x_i)\;,
-$$
+  \begin{gather*}
+    \V X = \sum_{i=1}^\infty (x_i-a)^2\,\WKM(X=x_i)\;,
+  \end{gather*}
 und im stetigen Fall hat man
-$$
-\V X =\int_{-\infty}^\infty (x-a)^2\,p(x)\,\mathrm d x\;.
-$$
+  \begin{gather*}
+    \V X =\int_{-\infty}^\infty (x-a)^2\,p(x)\,\mathrm d x\;.
+  \end{gather*}
 \item
 Es besteht die Identit"at
-$$
-\V X = \E X^2 -(\E X)^2\;.
-$$
+  \begin{gather*}
+    \V X = \E X^2 -(\E X)^2\;.
+  \end{gather*}
 \item
 F"ur eine konstante zuf"allige Gr"o"se $X$ folgt $\V X=0$ .
 \item
 F"ur $\alpha\in\R$ erh"alt man
-$$
-\V(\alpha\,X)=\alpha^2\,\V X\;.
-$$
+  \begin{gather*}
+    \V(\alpha\,X)=\alpha^2\,\V X\;.
+  \end{gather*}
 \item
 Sind $X$ und $Y$ unabh"angig, dann gilt
-$$
-\V(X+Y)=\V X + \V Y\;.
-$$
+  \begin{gather*}
+    \V(X+Y)=\V X + \V Y\;.
+  \end{gather*}
 \end{enumerate}
 
 \end{thm}
@@ -994,9 +994,9 @@ $X\sim \mathcal N(\mu,\sigma^2)$&$ \V X = \sigma^2$\\ \hline
 \subsubsection{Kovarianz}
 Gegeben seien zwei zuf"allige Gr"o"sen $X$ und $Y$ mit zweiten Momenten.
 Seien $a:=\E X$ und $b:=\E Y$ . Dann wird die \textbf{Kovarianz} von $X$ und $Y$ durch
-$$
-{\rm  cov}(X,Y):= \E(X-a)(Y-b)
-$$
+\begin{gather*}
+  {\rm  cov}(X,Y):= \E(X-a)(Y-b)
+\end{gather*}
 definiert.
 
 \textbf{Eigenschaften:}
@@ -1005,19 +1005,19 @@ definiert.
 \item
 Sind $X$ und $Y$ diskret mit m"oglichen Werten $x_1,x_2,\ldots$ bzw.~$y_1,y_2,\ldots$ aus $\R$,
 so berechnet sich die Kovarianz aus der Formel
-$$
-{\rm  cov}(X,Y)=\sum_{i,j=1}^\infty (x_i-a)(y_j-b)\, p_{ij}
-$$
+  \begin{gather*}
+    {\rm  cov}(X,Y)=\sum_{i,j=1}^\infty (x_i-a)(y_j-b)\, p_{ij}
+  \end{gather*}
 wobei
-$$
-p_{ij}=\WKM(X=x_i, Y=y_j)\;.
-$$
+  \begin{gather*}
+    p_{ij}=\WKM(X=x_i, Y=y_j)\;.
+  \end{gather*}
 \item
 Hat die Verteilung des zuf"alligen Vektors $(X,Y)$ eine Dichte $p \colon\R^2\mapsto\R$, so
 ergibt sich die Kovarianz von $X$ und $Y$ aus
-$$
-{\rm  cov}(X,Y)=\int_{-\infty}^\infty \int_{-\infty}^\infty (x-a)(y-b)\,p(x,y)\,\mathrm d x\, \mathrm d y\;.
-$$
+  \begin{gather*}
+    {\rm  cov}(X,Y)=\int_{-\infty}^\infty \int_{-\infty}^\infty (x-a)(y-b)\,p(x,y)\,\mathrm d x\, \mathrm d y\;.
+  \end{gather*}
 \item
 Sind $X$ und $Y$ unabh"angig, so impliziert dies ${\rm  cov}(X,Y)=0$, d.\,h.~$X$ und $Y$ sind
 \textbf{unkorreliert}. Man beachte, dass aus der Unkorreliertheit i.a.~nicht die Unabh"angigkeit folgt.
@@ -1030,13 +1030,13 @@ Man hat
 \subsubsection{Korrelationskoeffizient}
 F"ur zwei zuf"allige Gr"o"sen $X$ und $Y$ mit zweiten Momenten definiert man ihren
 \textbf{Korrelationskoeffizienten} durch
-$$
-\rho(X,Y):=\frac{{\rm  cov}(X,Y)}{(\V X)^{1/2}(\V Y)^{1/2}}\;.
-$$
+  \begin{gather*}
+    \rho(X,Y):=\frac{{\rm  cov}(X,Y)}{(\V X)^{1/2}(\V Y)^{1/2}}\;.
+  \end{gather*}
 Aus (\ref{cov}) folgt
-$$
--1\le \rho(X,Y)\le 1\;.
-$$
+  \begin{gather*}
+    -1\le \rho(X,Y)\le 1\;.
+  \end{gather*}
 F"ur unkorrelierte zuf"allige Gr"o"sen gilt $\rho(X,Y)=0$.
  Der Korrelationskoeffizient ist ein Ma"s f"ur den Grad der Abh"angigkeit von
 $X$ und $Y$. Je n"aher $\rho(X,Y)$ an $1$ oder $-1$ liegt, desto gr"o"ser ist die
